Fix alpha background broken path

--- a/src/style/ColorSlider.sass
+++ b/src/style/ColorSlider.sass
@@ -3,7 +3,7 @@
   margin: 10px 0
   width: 100%
   height: 10px
-  background: url(/alpha.svg)
+  background: url(alpha.svg)
 
   &__gradient
     width: 100%
